tests/baselines/reference/emitArrowFunctionWhenUsingArguments14_ES6(alwaysstrict=true).errors.txt
emitArrowFunctionWhenUsingArguments14_ES6.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments14_ES6.ts (1 errors) ====
    function f() {
        if (Math.random()) {
            let arguments = 100;
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
            return () => arguments;
        }
    }